--- a/Gustavo Guanabara (Curso JS)/exercicios01/ex001/styles.css
+++ b/Gustavo Guanabara (Curso JS)/exercicios01/ex001/styles.css
@@ -23,6 +23,11 @@ footer {
   font-style: italic;
 }
 
+div {
+  text-align: center;
+  padding: 8px;
+}
+
 img {
   border-radius: 50%;
   width: 250px;
