correção feita com comentários da explicação

--- a/Gustavo Guanabara (Curso JS)/exercicios03/correção/styles.css
+++ b/Gustavo Guanabara (Curso JS)/exercicios03/correção/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: rgb(70, 42, 236);
+  background: rgb(70, 142, 236);
   font: normal 15pt Arial;
 }
 
@@ -15,6 +15,10 @@ section {
   width: 500px;
   margin: auto;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
+}
+
+select {
+  width: 150px;
 }
 
 footer {
